--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
     </distributionManagement>
 
     <scm>
-        <url>https://github.com/elo7/cassandra-migration</url>
-        <connection>scm:git:git@github.com:elo7/cassandra-migration.git</connection>
-        <developerConnection>scm:git:git@github.com:elo7/cassandra-migration.git</developerConnection>
+        <url>https://github.com/xpinvest/cassandra-migration</url>
+        <connection>scm:git:github.com/xpinvest/cassandra-migration.git</connection>
+        <developerConnection>scm:git:user@github.com/xpinvest/cassandra-migration.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
