Tests for Cassandra 3.4.0

--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,10 @@
                 </includes>
                 <filtering>true</filtering>
             </resource>
+            <resource>
+                <directory>${project.basedir}/src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>            
         </resources>
         <plugins>
             <plugin>
