--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,17 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.1.11</version>
+        </dependency>    
+        <!-- Static analyzer support -->
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.2</version>
+            <optional>true</optional>
         </dependency>        
+            
+        <!-- TEST -->
+                        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
