--- a/pom.xml
+++ b/pom.xml
@@ -188,8 +188,27 @@
                     </execution>
                 </executions>
             </plugin>
+
+          <plugin>
+            <groupId>com.amashchenko.maven.plugin</groupId>
+            <artifactId>gitflow-maven-plugin</artifactId>
+            <version>1.10.0</version>
+            <configuration>
+              <gitFlowConfig>
+                <productionBranch>master</productionBranch>
+                <developmentBranch>develop</developmentBranch>
+                <featureBranchPrefix>feature/</featureBranchPrefix>
+                <releaseBranchPrefix>release/</releaseBranchPrefix>
+                <hotfixBranchPrefix>hotfix/</hotfixBranchPrefix>
+                <supportBranchPrefix>support/</supportBranchPrefix>
+                <versionTagPrefix></versionTagPrefix>
+                <origin>origin</origin>
+              </gitFlowConfig>
+            </configuration>
+          </plugin>
         </plugins>
     </build>
+
     <repositories>
         <repository>
             <id>mymavenrepo</id>
