--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>cz.xpgroup</groupId>
     <artifactId>cassandra-migration</artifactId>
     <name>XP Cassandra Migration</name>
-    <version>0.12-SNAPSHOT</version>
+    <version>0.12</version>
     <description>Database migration tool for Cassandra forked from https://github.com/elo7/cassandra-migration/
     </description>
     <url>https://github.com/elo7/cassandra-migration</url>
