--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,15 +27,10 @@ release new version:
   image: maven:3.6.1-jdk-8
   stage: release
   script:
-    - git config --global user.email "gitlab@xpgroup.cz"
-    - git config --global user.name "gitlab-ci"
-    - git remote set-url origin git@gitlab.xpgroup.cz:backend/cassandra-migration.git
-    - mkdir -p ~/.ssh
-    - echo "$SSH"  > ~/.ssh/id_rsa
-    - chmod 600 ~/.ssh/id_rsa
-    - ssh-keyscan -p 22031 gitlab.xpgroup.cz >> ~/.ssh/known_hosts
-    - echo "Host gitlab.xpgroup.cz" > ~/.ssh/config
-    - echo "       Port 22031" >> ~/.ssh/config
+    - git config --global user.email "xp-bot@xpgroup.cz"
+    - git config --global user.name "xp-bot"
+    - git config --global user.password "$BOT_PASS"
+    - git remote set-url origin https://gitlab.xpgroup.cz/backend/cassandra-migration.git
     - mvn -B clean gitflow:release
   only:
     - develop
